--- a/lib/Resources/config/container/solr/criterion_visitors.yml
+++ b/lib/Resources/config/container/solr/criterion_visitors.yml
@@ -5,6 +5,7 @@ parameters:
     ezpublish.search.solr.query.common.criterion_visitor.content_type_id_in.class: EzSystems\EzPlatformSolrSearchEngine\Query\Common\CriterionVisitor\ContentTypeIdIn
     ezpublish.search.solr.query.common.criterion_visitor.content_type_identifier_in.class: EzSystems\EzPlatformSolrSearchEngine\Query\Common\CriterionVisitor\ContentTypeIdentifierIn
     ezpublish.search.solr.query.common.criterion_visitor.custom_field_in.class: EzSystems\EzPlatformSolrSearchEngine\Query\Common\CriterionVisitor\CustomField\CustomFieldIn
+    ezpublish.search.solr.query.common.criterion_visitor.custom_field_like.class: EzSystems\EzPlatformSolrSearchEngine\Query\Common\CriterionVisitor\Field\FieldLike
     ezpublish.search.solr.query.common.criterion_visitor.custom_field_range.class: EzSystems\EzPlatformSolrSearchEngine\Query\Common\CriterionVisitor\CustomField\CustomFieldRange
     ezpublish.search.solr.query.common.criterion_visitor.field_in.class: EzSystems\EzPlatformSolrSearchEngine\Query\Common\CriterionVisitor\Field\FieldIn
     ezpublish.search.solr.query.common.criterion_visitor.field_range.class: EzSystems\EzPlatformSolrSearchEngine\Query\Common\CriterionVisitor\Field\FieldRange
@@ -85,7 +86,6 @@ services:
             - {name: ezpublish.search.solr.query.location.criterion_visitor}
 
     ezpublish.search.solr.query.common.criterion_visitor.field_like:
-        class: EzSystems\EzPlatformSolrSearchEngine\Query\Common\CriterionVisitor\Field\FieldLike
         class: '%ezpublish.search.solr.query.common.criterion_visitor.custom_field_like.class%'
         arguments:
             - '@ezpublish.search.common.field_name_resolver'
